Ensure that the swiper arrows don't overlap in RTL

--- a/src/blocks/carousel/view.scss
+++ b/src/blocks/carousel/view.scss
@@ -166,6 +166,7 @@
 	.swiper-button-prev {
 		left: 1.5em;
 		display: none;
+		right: auto;
 
 		@include media( mobile ) {
 			display: block;
